# serialTerminal

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  serial_adapter.cc
stm32/SerialCOM/: .cproject  .mxproject  .project  SerialCOM Debug.launch  SerialCOM.ioc
stm32/SerialCOM/Core/Src/: main.c
stm32/SerialCOM/Debug/: SerialCOM.elf  SerialCOM.list  SerialCOM.map  makefile
stm32/SerialCOM/Debug/Core/Src/: main.su  subdir.mk
stm32/SerialCOM/Debug/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_can.d  subdir.mk
stm32/SerialCOM/Debug/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: subdir.mk
stm32/SerialCOM/Debug/Middlewares/ST/STM32_USB_Device_Library/Core/Src/: subdir.mk
stm32/SerialCOM/Debug/USB_DEVICE/App/: subdir.mk  usbd_cdc_if.su
stm32/SerialCOM/USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
